# stardeps

./: .gitignore  CMakeLists.txt  CPackOptions.cmake.in  README.md  build.sh
CMakeModules/: IncludeLibraries.cmake  ProjectIncludeLibraries.cmake  ProjectIncludeLibrariesQt.cmake
data/formulas/curl/: curl.json
data/formulas/expat/: expat.json
data/formulas/ffmpeg/: ffmpeg.json
data/formulas/fontconfig/: fontconfig.json
data/formulas/freetype2/: freetype2.json
data/formulas/fribidi/: fribidi.json
data/formulas/libass/: libass.json
data/formulas/libde265/: libde265.json
data/formulas/libevent/: libevent.json
data/formulas/libjpegturbo/: libjpegturbo.json
data/formulas/libpng/: libpng.json
data/formulas/libvpx/: libvpx.json
data/formulas/live555/: live555.json
data/formulas/mysql/: mysql.json
data/formulas/mysqlconnectorcpp/: mysqlconnectorcpp.json
data/formulas/opencv/: opencv.json
data/formulas/openh264/: openh264.json
data/formulas/openssl/: openssl.json
data/formulas/qt5/: qt5.json
data/formulas/qt6/: qt6.json
data/formulas/qtwayland/: qtwayland.json
data/formulas/x264/: x264.json
data/formulas/x265/: x265.json
data/formulas/zlib/: zlib.json
data/logos/: logo.icns
src/: main.cpp
src/CommandEnvironment/: AbstractCommandEnvironment.cpp  AbstractCommandEnvironment.h  DefaultCommandEnvironment.cpp  DefaultCommandEnvironment.h  PackageCommandEnvironment.cpp  PackageCommandEnvironment.h
src/Commands/: AbstractCommand.cpp  AbstractCommand.h  AbstractPackageCommand.cpp  AbstractPackageCommand.h  CommandBuild.cpp  CommandBuild.h  CommandClean.cpp  CommandClean.h  CommandConfigure.cpp  CommandConfigure.h  CommandCreateEnv.cpp  CommandCreateEnv.h  CommandInstall.cpp  CommandInstall.h  CommandPrepare.cpp  CommandPrepare.h  CommandsExecutor.cpp  CommandsExecutor.h  CreateEnvCommand.cpp  CreateEnvCommand.h
src/CommandsExecutor/: CommandsExecutor.cpp  CommandsExecutor.h
src/Connector/: AbstractConnector.cpp  AbstractConnector.h  ConnectorArchive.cpp  ConnectorArchive.h  ConnectorGit.cpp  ConnectorGit.h  ConnectorMercurial.cpp  ConnectorMercurial.h  ConnectorSVN.cpp  ConnectorSVN.h
src/Environment/: Environment.cpp  Environment.h  EnvironmentDefs.h  EnvironmentLoader.cpp  EnvironmentLoader.h
src/Formulas/: Formula.cpp  Formula.h  FormulaCommands.cpp  FormulaCommands.h  FormulaDependencies.cpp  FormulaDependencies.h  FormulaOptionRules.cpp  FormulaOptionRules.h  FormulaOptions.cpp  FormulaOptions.h  FormulaParser.cpp  FormulaParser.h  FormulaRecipe.cpp  FormulaRecipe.h  FormulaStep.cpp  FormulaStep.h  FormulaStepAction.cpp  FormulaStepAction.h  FormulaVariableList.cpp  FormulaVariableList.h  FormulasDependencies.cpp  FormulasDependencies.h
src/Global/: QApplicationSettings.cpp  QApplicationSettings.h  VersionHelper.cpp  VersionHelper.h
src/Package/: PackageDependency.cpp  PackageDependency.h  PackageOption.cpp  PackageOption.h  PackageOptionList.cpp  PackageOptionList.h  PackageSearchMode.cpp  PackageSearchMode.h
src/Platform/: Platform.cpp  Platform.h
src/Shell/: ShellExecutor.cpp  ShellExecutor.h
src/Variable/: VariableList.cpp  VariableList.h
src/Version/: VersionHelper.cpp  VersionHelper.h
test/: main.cpp
test/Formulas/: FormulaDependenciesTestCase.cpp  FormulaDependenciesTestCase.h  FormulasDependenciesTestCase.cpp  FormulasDependenciesTestCase.h
test/Global/: VersionHelperTestCase.cpp  VersionHelperTestCase.h
test/Version/: VersionHelperTestCase.cpp  VersionHelperTestCase.h
